# Gleam-Observer

./: .gitignore  .version  Cargo.toml  README.md  install.sh  uninstall.sh
assets/: README.md
config/: default.toml
packaging/arch/: gleam-observer.install
packaging/desktop/: gleam-observer-tui.desktop  gleam-observer.desktop
packaging/systemd/: gleam-observer.service  snixembed.service
src/: app.rs  config.rs  error.rs  lib.rs  main.rs
src/alerts/: detector.rs  mod.rs  notifier.rs
src/daemon/: mod.rs  notifications.rs  signals.rs
src/gpu/: amd.rs  backend.rs  intel.rs  mod.rs  nvidia.rs
src/history/: buffer.rs  export.rs  mod.rs
src/logger/: mod.rs
src/metrics/: disk.rs  mod.rs  network.rs  system.rs
src/process/: mod.rs  signals.rs  tree.rs
src/trends/: analyzer.rs  mod.rs  types.rs
src/tui/: dialogs.rs  events.rs  mod.rs  theme.rs  ui.rs
src/tui/widgets/: mod.rs
